packages/twenty-docker/k8s/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: twentycrm-stage
  labels:
    name: twentycrm-stage
    environment: staging
