packages/twenty-docker/k8s/stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skillcrm-stage-server
  namespace: twentycrm-stage
  labels:
    app: skillcrm-stage
    component: server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: skillcrm-stage
    component: server
