packages/twenty-docker/k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillcrm-stage-ingress
  namespace: twentycrm-stage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - stage.skillcrm.ru
    secretName: skillcrm-stage-tls
  rules:
  - host: stage.skillcrm.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skillcrm-stage-server
            port:
              number: 80
